# youtube-comments-analyzer

./: .gitignore  README.md
backend/: main.py  models.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
